force-app/main/default/objects/Account/fields/BIPOC_led_diaper_program__c.field-meta.xml
<CustomField>
    <fullName>BIPOC_led_diaper_program__c</fullName>
    <formula>if(includes( NDBN_Member_Type__c,&quot;APS only&quot;),false,IF (OR(npe01__One2OneContact__r.Black_African_American_African__c,npe01__One2OneContact__r.Asian_American__c,npe01__One2OneContact__r.Hispanic_Latinx__c, npe01__One2OneContact__r.Multi_racial_Multi_ethnic__c, npe01__One2OneContact__r.Native_American_Indigenous__c, npe01__One2OneContact__r.Native_Hawaiian_or_Pacific_Islander__c),TRUE, FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIPOC-led diaper program</label>
    <type>Checkbox</type>
</CustomField>