force-app/main/default/objects/Account/fields/Black_led_APS_program__c.field-meta.xml
<CustomField>
    <fullName>Black_led_APS_program__c</fullName>
    <formula>If (APS_Primary_Contact__r.Black_African_American_African__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Black-led APS program</label>
    <type>Checkbox</type>
</CustomField>