force-app/main/default/objects/Account/fields/Black_Led_DB_Program__c.field-meta.xml
<CustomField>
    <fullName>Black_Led_DB_Program__c</fullName>
    <formula>if(includes( NDBN_Member_Type__c,&quot;APS only&quot;),false, If (npe01__One2OneContact__r.Black_African_American_African__c = True, True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Black-Led DB Program</label>
    <type>Checkbox</type>
</CustomField>