force-app/main/default/objects/Account/fields/Children_Served_Annually__c.field-meta.xml
<CustomField>
    <fullName>Children_Served_Annually__c</fullName>
    <inlineHelpText>How many children do you serve annually?</inlineHelpText>
    <label>Children Served Annually</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>