force-app/main/default/objects/Account/fields/Children_Served_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Children_Served_Monthly__c</fullName>
    <inlineHelpText>How many children do you serve monthly?</inlineHelpText>
    <label>Children Served Monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>