force-app/main/default/objects/Account/fields/Cloth_Diapers_Provided__c.field-meta.xml
<CustomField>
    <fullName>Cloth_Diapers_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if members provide cloth diapers</description>
    <inlineHelpText>Families are regularly offered access to cloth diapers as a part of of the diaper distribution program</inlineHelpText>
    <label>Cloth Diapers Provided</label>
    <type>Checkbox</type>
</CustomField>