force-app/main/default/objects/Account/fields/Committee_Taskforce_or_Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Committee_Taskforce_or_Volunteer__c</fullName>
    <label>Committee Taskforce or Volunteer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2017 Taskforce</fullName>
            </value>
            <value>
                <fullName>Economic Impact</fullName>
            </value>
            <value>
                <fullName>Advisory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>