force-app/main/default/objects/Account/fields/Community_Served__c.field-meta.xml
<CustomField>
    <fullName>Community_Served__c</fullName>
    <inlineHelpText>Please describes the community you serve (e.g., urban, suburban, rural)?</inlineHelpText>
    <label>Community Served</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>