force-app/main/default/objects/Account/fields/Company_City_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Company_City_Hidden__c</fullName>
    <description>Field is used to map the Company City from the Lead object to the Organization Account</description>
    <label>Company City (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>