force-app/main/default/objects/Account/fields/Company_State_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Company_State_Hidden__c</fullName>
    <description>Field is used to map the Company State from the Lead object to the Organization Account</description>
    <label>Company State (Hidden)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>