force-app/main/default/objects/Account/fields/Congressional_District__c.field-meta.xml
<CustomField>
    <fullName>Congressional_District__c</fullName>
    <description>Identifies the US congressional districts (up to 3) served by the Diaper Bank</description>
    <label>Congressional District</label>
    <length>20</length>
    <type>Text</type>
</CustomField>