force-app/main/default/objects/Account/fields/Correct_Logos_on_Web__c.field-meta.xml
<CustomField>
    <fullName>Correct_Logos_on_Web__c</fullName>
    <inlineHelpText>Noted if a member gets Huggies but doesn&apos;t have our logo or mention membership at least one click in</inlineHelpText>
    <label>Correct Logo(s) on Web?</label>
    <length>155</length>
    <type>Text</type>
</CustomField>