force-app/main/default/objects/Account/fields/DDDRP__c.field-meta.xml
<CustomField>
    <fullName>DDDRP__c</fullName>
    <label>DDDRP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cohort 1</fullName>
            </value>
            <value>
                <fullName>cohort 2</fullName>
            </value>
            <value>
                <fullName>cohort 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>