force-app/main/default/objects/Account/fields/Diaper_Bank_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Bank_Member_Type__c</fullName>
    <label>Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Applicant</fullName>
            </value>
            <value>
                <fullName>APS only</fullName>
            </value>
            <value>
                <fullName>Change Leader</fullName>
            </value>
            <value>
                <fullName>Outside Network</fullName>
            </value>
            <value>
                <fullName>Left Network</fullName>
            </value>
            <value>
                <fullName>Other-NonMember</fullName>
            </value>
            <value>
                <fullName>Sustaining Member</fullName>
            </value>
            <value>
                <fullName>Certified Member</fullName>
            </value>
            <value>
                <fullName>Established Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>