force-app/main/default/objects/Account/fields/diaper_banks_in_america_2012__c.field-meta.xml
<CustomField>
    <fullName>diaper_banks_in_america_2012__c</fullName>
    <defaultValue>false</defaultValue>
    <description>attending confernece</description>
    <label>diaper banks in america 2012</label>
    <type>Checkbox</type>
</CustomField>