force-app/main/default/objects/Account/fields/Diaper_Drives_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Diaper_Drives_This_Year__c</fullName>
    <inlineHelpText>How many diaper drives have you received diapers from this calendar year?</inlineHelpText>
    <label>Diaper Drives This Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>