force-app/main/default/objects/Account/fields/Diapers_By_Corporations__c.field-meta.xml
<CustomField>
    <fullName>Diapers_By_Corporations__c</fullName>
    <inlineHelpText>How many diapers were donated this year by corporations?</inlineHelpText>
    <label>Diapers By Corporations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>