force-app/main/default/objects/Account/fields/Diapers_Donated__c.field-meta.xml
<CustomField>
    <fullName>Diapers_Donated__c</fullName>
    <inlineHelpText>What percentage of your diapers are donated?</inlineHelpText>
    <label>Diapers Donated (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>