force-app/main/default/objects/Account/fields/Diapers_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Diapers_Purchased__c</fullName>
    <label>Diapers Purchased (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>