force-app/main/default/objects/Account/fields/Distribute_Disposables__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Disposables__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distribute Disposables</label>
    <type>Checkbox</type>
</CustomField>