force-app/main/default/objects/Account/fields/Distribute_Non_Diaper_Items__c.field-meta.xml
<CustomField>
    <fullName>Distribute_Non_Diaper_Items__c</fullName>
    <inlineHelpText>Do you distribute items other than diapers and diapering related items (such as baby items, clothing, cribs, other household items)</inlineHelpText>
    <label>Distribute Non-Diaper Items</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Yes (Please Specify)</fullName>
                <isActive>false</isActive>
                <label>Yes (Please Specify)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>