force-app/main/default/objects/Account/fields/Distribution_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Frequency__c</fullName>
    <inlineHelpText>How frequently do you distribute diapers to each organization or client that you partner with?</inlineHelpText>
    <label>Distribution Frequency NDBN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Alternating Weeks</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>