force-app/main/default/objects/Account/fields/Distribution_Method__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method__c</fullName>
    <description>Values can be: Agencies, Individuals, both, unknown</description>
    <inlineHelpText>Individuals - Direct distribution of product to client; Agencies - Partner agencies distribute product to client; Both - Utilize both methods of product distribution</inlineHelpText>
    <label>Distribution Method NDBN</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencies</fullName>
            </value>
            <value>
                <fullName>Individuals</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Only Individuals in Our Program</fullName>
                <isActive>false</isActive>
                <label>Only Individuals in Our Program</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Other (Please Specify)</fullName>
                <isActive>false</isActive>
                <label>Other (Please Specify)</label>
            </value>
            <value>
                <fullName>Through Our Own Agency/Church Activities</fullName>
                <isActive>false</isActive>
                <label>Through Our Own Agency/Church Activities</label>
            </value>
            <value>
                <fullName>Through our own agency (or church) activities</fullName>
                <isActive>false</isActive>
                <label>Through our own agency (or church) activities</label>
            </value>
            <value>
                <fullName>Through our own agency (or church) activities, Other</fullName>
                <isActive>false</isActive>
                <label>Through our own agency (or church) activities, Other</label>
            </value>
            <value>
                <fullName>Through our own agency (or church) activities, To Both Individuals &amp; Agencies</fullName>
                <isActive>false</isActive>
                <label>Through our own agency (or church) activities, To Both Individuals &amp; Agencies</label>
            </value>
            <value>
                <fullName>Through our own agency (or church) activities, To Both Individuals &amp; Agencies, Other</fullName>
                <isActive>false</isActive>
                <label>Through our own agency (or church) activities, To Both Individuals &amp; Agencies, Other</label>
            </value>
            <value>
                <fullName>To Agencies, Other</fullName>
                <isActive>false</isActive>
                <label>To Agencies, Other</label>
            </value>
            <value>
                <fullName>To Agencies, Through our own agency (or church) activities</fullName>
                <isActive>false</isActive>
                <label>To Agencies, Through our own agency (or church) activities</label>
            </value>
            <value>
                <fullName>To Both Individuals &amp; Agencies, Other</fullName>
                <isActive>false</isActive>
                <label>To Both Individuals &amp; Agencies, Other</label>
            </value>
            <value>
                <fullName>To Individuals, Through our own agency (or church) activities</fullName>
                <isActive>false</isActive>
                <label>To Individuals, Through our own agency (or church) activities</label>
            </value>
            <value>
                <fullName>To Individuals, Through our own agency (or church) activities, Other</fullName>
                <isActive>false</isActive>
                <label>To Individuals, Through our own agency (or church) activities, Other</label>
            </value>
            <value>
                <fullName>To Individuals, Through our own agency (or church) activities, To Both Individuals &amp; Agencies</fullName>
                <isActive>false</isActive>
                <label>To Individuals, Through our own agency (or church) activities, To Both Individuals &amp; Agencies</label>
            </value>
            <value>
                <fullName>To Individuals, To Agencies, Through our own agency (or church) activities</fullName>
                <isActive>false</isActive>
                <label>To Individuals, To Agencies, Through our own agency (or church) activities</label>
            </value>
            <value>
                <fullName>To Individuals, To Agencies, Through our own agency (or church) activities, To Both Individuals &amp; Agencies</fullName>
                <isActive>false</isActive>
                <label>To Individuals, To Agencies, Through our own agency (or church) activities, To Both Individuals &amp; Agencies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>