force-app/main/default/objects/Account/fields/Distribution_Method_Other__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Method_Other__c</fullName>
    <label>Distribution Method - Other</label>
    <type>TextArea</type>
</CustomField>