force-app/main/default/objects/Account/fields/Distribution_Plan__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Plan__c</fullName>
    <label>Distribution Plan</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>