force-app/main/default/objects/Account/fields/Does_Not_Accept_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Does_Not_Accept_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does not want any referrals from NDBN</description>
    <label>Does Not Accept Referrals</label>
    <type>Checkbox</type>
</CustomField>