force-app/main/default/objects/Account/fields/Dues_Cleared_2024__c.field-meta.xml
<CustomField>
    <fullName>Dues_Cleared_2024__c</fullName>
    <inlineHelpText>This field is to reconcile what is in Saleforce</inlineHelpText>
    <label>Dues Cleared 2024</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unpaid</fullName>
            </value>
            <value>
                <fullName>In Quickbooks</fullName>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
            </value>
            <value>
                <fullName>Void/NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>