force-app/main/default/objects/Account/fields/Dues_Expiration_NDBN_only__c.field-meta.xml
<CustomField>
    <fullName>Dues_Expiration_NDBN_only__c</fullName>
    <inlineHelpText>Membership dues are paid up through this date.</inlineHelpText>
    <label>Dues Expiration</label>
    <type>Date</type>
</CustomField>