force-app/main/default/objects/Account/fields/Dues_or_Survey_are_LATE__c.field-meta.xml
<CustomField>
    <fullName>Dues_or_Survey_are_LATE__c</fullName>
    <formula>FA_Date_Submitted__c  &lt;=  DATE(2024,1,1)  ||  Dues_Expiration_NDBN_only__c  &lt;=  DATE(2024,12,30)</formula>
    <inlineHelpText>If member dues expiration date OR annual survey submission date are less than or equal to 12/31 of last year. (Formula needs to be updated every year.)</inlineHelpText>
    <label>Dues or Survey are OUTSTANDING</label>
    <type>Checkbox</type>
</CustomField>