force-app/main/default/objects/Account/fields/DUPE_COMPARE__c.field-meta.xml
<CustomField>
    <fullName>DUPE_COMPARE__c</fullName>
    <externalId>true</externalId>
    <label>DUPE_COMPARE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>