force-app/main/default/objects/Account/fields/EIN_Number__c.field-meta.xml
<CustomField>
    <fullName>EIN_Number__c</fullName>
    <description>Organization EIN</description>
    <label>EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>