force-app/main/default/objects/Account/fields/EIS_Note__c.field-meta.xml
<CustomField>
    <fullName>EIS_Note__c</fullName>
    <inlineHelpText>Temporary field for research planning</inlineHelpText>
    <label>EIS Note</label>
    <length>155</length>
    <type>Text</type>
</CustomField>