force-app/main/default/objects/Account/fields/EIS_Stage__c.field-meta.xml
<CustomField>
    <fullName>EIS_Stage__c</fullName>
    <label>EIS Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested/MOU</fullName>
            </value>
            <value>
                <fullName>MOU signed</fullName>
            </value>
            <value>
                <fullName>Training done</fullName>
            </value>
            <value>
                <fullName>Surveying</fullName>
            </value>
            <value>
                <fullName>Done Surveying</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>No response</fullName>
                <isActive>false</isActive>
                <label>No response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>