force-app/main/default/objects/Account/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <inlineHelpText>This field is no longer updated. Please replace it with the field labeled &quot;Primary Contact Email&quot;</inlineHelpText>
    <label>xxEmail</label>
    <type>Email</type>
</CustomField>