force-app/main/default/objects/Account/fields/FA_Date_Submitted__c.field-meta.xml
<CustomField>
    <fullName>FA_Date_Submitted__c</fullName>
    <inlineHelpText>Date of Most Recent Annual Member Survey Submitted</inlineHelpText>
    <label>Annual Survey Date Submitted</label>
    <type>Date</type>
</CustomField>