force-app/main/default/objects/Account/fields/Facebook__c.field-meta.xml
<CustomField>
    <fullName>Facebook__c</fullName>
    <description>Facebook account page</description>
    <inlineHelpText>Enter full URL for Facebook page</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>