force-app/main/default/objects/Account/fields/FFC_Applications_Submitted__c.field-meta.xml
<CustomField>
    <fullName>FFC_Applications_Submitted__c</fullName>
    <inlineHelpText>The number of times this organization has applied for a Funds for Change Grant. (Members may only apply once per grant cycle.)</inlineHelpText>
    <label>FFC Applications Submitted</label>
    <summaryForeignKey>FFC_Participation__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>