force-app/main/default/objects/Account/fields/FFC_Grant_Applied_2014__c.field-meta.xml
<CustomField>
    <fullName>FFC_Grant_Applied_2014__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Applied for the 2014 Funds for Change Grant</description>
    <label>FFC Grant Applied 2014</label>
    <type>Checkbox</type>
</CustomField>