force-app/main/default/objects/Account/fields/FFC_Grant_Applied_2016__c.field-meta.xml
<CustomField>
    <fullName>FFC_Grant_Applied_2016__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FFC Grant Applied 2016</label>
    <type>Checkbox</type>
</CustomField>