force-app/main/default/objects/Account/fields/FFC_Grant_Award_2016__c.field-meta.xml
<CustomField>
    <fullName>FFC_Grant_Award_2016__c</fullName>
    <label>FFC Grant Award 2016</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>