force-app/main/default/objects/Account/fields/FFC_Most_Recent_Grant__c.field-meta.xml
<CustomField>
    <fullName>FFC_Most_Recent_Grant__c</fullName>
    <label>FFC Most Recent Grant</label>
    <summarizedField>FFC_Participation__c.Start_Date__c</summarizedField>
    <summaryForeignKey>FFC_Participation__c.Account__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>