force-app/main/default/objects/Account/fields/FFC_Sum_of_All_Grants__c.field-meta.xml
<CustomField>
    <fullName>FFC_Sum_of_All_Grants__c</fullName>
    <inlineHelpText>This is the total amount of funding this organization has received through Funds for Change.</inlineHelpText>
    <label>FFC Sum of All Grants</label>
    <summarizedField>FFC_Participation__c.Award_Amount__c</summarizedField>
    <summaryForeignKey>FFC_Participation__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>