force-app/main/default/objects/Account/fields/Final_Reconciled_2021_APS_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Final_Reconciled_2021_APS_Distribution__c</fullName>
    <inlineHelpText>Jennifer&apos;s Final Best Numbers</inlineHelpText>
    <label>Past APS Distribution 2021</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>