force-app/main/default/objects/Account/fields/First_Diaper_Distribution_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Diaper_Distribution_Date__c</fullName>
    <inlineHelpText>What year was your organization first distribute diapers?</inlineHelpText>
    <label>First Diaper Distribution Date</label>
    <type>Date</type>
</CustomField>